add a hacker background color and hover effect

--- a/stopwatch.html
+++ b/stopwatch.html
@@ -5,13 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>stopwatch</title>
 
+    <!-- Font Awesome File -->
+    <link rel="stylesheet" href="./all.css">
+
+    <!-- Custom CSS File -->
     <link rel="stylesheet" href="./style.css">
+
 </head>
 <body class="flex">
     
     <div class="container flex border">
         <div>
-            <h3 id="screen" class="border">00 : 00 : 00</h3>
+            <h3 id="screen" class="border">00:00:00</h3>
         </div>
         <!-- add neo texts -->
         <div class="controls flex">
@@ -20,6 +25,21 @@
         </div>
 
         <button id="reset">Reset</button>
+    </div>
+
+    <div class="social flex">
+        <div class="icon">
+            <a href="https://twitter.com/Rukki_Kevwe" target="_blank"><i class="fab fa-twitter"></i></a>
+        </div>
+        <div class="icon">
+            <a href="https://github.com/K3vwe" target="_blank"><i class="fab fa-github"></i></a>
+        </div>
+        <div class="icon">
+            <a href="https://facebook.com/rukewe.onowho" target="_blank"><i class="fab fa-facebook-f"></i></a>
+        </div>
+        <div class="icon">
+            <i class="fab fa-linkedin"></i>
+        </div>
     </div>
 
     <script src="./stopwatch.js"></script>
