--- a/stopwatch.html
+++ b/stopwatch.html
@@ -6,10 +6,10 @@
     <title>stopwatch</title>
 
     <!-- Font Awesome File -->
-    <link rel="stylesheet" href="./all.css">
+    <link rel="stylesheet" href="./css/all.css">
 
     <!-- Custom CSS File -->
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
 </head>
 <body class="flex">
@@ -44,6 +44,6 @@
         </div>
     </div>
 
-    <script src="./stopwatch.js"></script>
+    <script src="./js/stopwatch.js"></script>
 </body>
 </html>
